support/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bebas-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: bebas-routing
spec:
  rules:
  - http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8000
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 8001
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 8001
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8002
      - path: /tenant
        pathType: Prefix
        backend:
          service:
            name: tenant-service
            port:
              number: 8003
      - path: /wishlist
        pathType: Prefix
        backend:
          service:
            name: wishlist-service
            port:
              number: 8004
